# mcp-hub

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
src/: main.py
src/apis/: agent.py  auth.py  llm.py  mcp.py  user.py
src/dbs/: checkpointer.py  ddl.py  dml.py  postgre.py
src/schemas/: agent.py  api.py  auth.py  llm.py  mcp.py  user.py
src/utils/: auth.py  jwt.py  path.py
web/: Dockerfile  package-lock.json  package.json
web/src/api/: agent.ts  auth.ts  base.ts  llm.ts  mcp.ts  user.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/admin/agents/: page.tsx
web/src/app/admin/llm/: page.tsx
web/src/app/admin/mcp/: page.tsx
web/src/app/admin/users/: page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/components/: AuthForm.tsx  Sidebar.tsx  ThemeToggle.tsx  TopBar.tsx
web/src/context/: AuthContext.tsx  ThemeContext.tsx
web/src/hooks/: useAgent.ts  useAuth.ts  useLlm.ts  useMcp.ts  useUsers.ts
web/src/store/: auth.ts
web/src/utils/: cookie.ts
