[project]
name = "mcp-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.138.1",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mcp>=1.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "python-jose>=3.5.0",
    "uvicorn>=0.49.0",
]
